--- a/index.html
+++ b/index.html
@@ -57,19 +57,19 @@
                     <div class="card-content">
                         <div class="card-row">
                             <label>رقم اللوحة :</label>
-                            <div>5625ZUA</div>
+                            <div>9979BSB</div>
                         </div>
                         <div class="card-row">
                             <label>رقم الهيكل :</label>
-                            <div>WDB9340821L142539</div>
+                            <div>MRFZX69G8B7020789</div>
                         </div>
                         <div class="card-row">
                             <label>الشركة الصانعة :</label>
-                            <div>مرسيدس</div>
+                            <div>تويوتا</div>
                         </div>
                         <div class="card-row">
                             <label>نوع السيارة :</label>
-                            <div>رأس</div>
+                            <div>جيب فورتشنر</div>
                         </div>
                         <div class="card-row">
                             <label>تاريخ الفحص:</label>
