--- a/index.html
+++ b/index.html
@@ -57,19 +57,19 @@
                     <div class="card-content">
                         <div class="card-row">
                             <label>رقم اللوحة :</label>
-                            <div>9979BSB</div>
+                            <div></div>
                         </div>
                         <div class="card-row">
                             <label>رقم الهيكل :</label>
-                            <div>MRFZX69G8B7020789</div>
+                            <div></div>
                         </div>
                         <div class="card-row">
                             <label>الشركة الصانعة :</label>
-                            <div>تويوتا</div>
+                            <div></div>
                         </div>
                         <div class="card-row">
                             <label>نوع السيارة :</label>
-                            <div>جيب فورتشنر</div>
+                            <div> </div>
                         </div>
                         <div class="card-row">
                             <label>تاريخ الفحص:</label>
@@ -77,14 +77,14 @@
                         </div>
                         <div class="card-row">
                             <label>مركز الفحص:</label>
-                            <div>الرياض 1 - طريق الدمام</div>
+                            <div>الرياض 1 - طريق </div>
                         </div>
                         <div class="card-row">
                             <label>نوع الخدمة:</label>
-                            <div>خدمة الفحص الدوري</div>
+                            <div> </div>
                         </div>
                         <div class="card-row">
-                            <label>تاريخ انتهاء صلاحية الفحص:</label>
+                            <label>تاريخ انتهاء  الفحص:</label>
                             <div id="expireDate">27/7/2025</div>
                         </div>
                     </div>
